# oatmeal

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  compile_flags.txt  oatmeal.sh
include/: AliveEntity.hh  Debug.hh  Enemy.hh  PObject.hh  Player.hh  Vector.hh  ecs.hh  interutils.hh  sparse_set.hh  utils.hpp
src/: AliveEntity.cc  Debug.cc  Enemy.cc  PObject.cc  Vector.cc  components.rs  constants.rs  ecs.cc  game.rs  main.cc  main.cpp  main.rs  utils.cpp
src/assets/player/: player.txt
src/components/: RenderTarget.rs  Square.rs  Vec2.rs  render_target.rs  square.rs
